# tool-chat

./: .env.example  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  TEST.md  docker-compose.yaml  feedback_logs.jsonl  makefile  pyproject.toml
alembic/: env.py
alembic/versions/: 1e8347aa8606_update_updated_courseprofile.py  2b4913966484_drop_drop_grade_from_courses_table.py  890a1c58511c_add_updated_the_syntax_to_use_.py  92a3910da503_remove_incorrect_unique_constraints_.py  b416390b0c5a_update_updated_feedback_table.py  eab1e2f865b0_add_initial_tables_creation.py
docker/: init-databases.sh  redis.conf
scripts/: create_admin.py
src/: __init__.py
src/api/: __init__.py  app.py
src/api/auth/: auth.py
src/api/core/: auth.py  cache.py  rate_limit.py
src/api/routes/: __init__.py
src/api/routes/v1/: admin.py  auth.py  feedback.py  health.py  history.py  streamer.py
src/config/: __init__.py  config.py  config.yaml  settings.py
src/db/: __init__.py  crud.py  init.py  models.py  test_models.py
src/frontend/: app.py
src/logic/: graph.py  nodes.py  prompts.py  state.py  tools.py  utils.py
src/schemas/: __init__.py  input_schema.py  output_schema.py  types.py
src/utilities/: model_config.py
tests/: conftest.py  test_auth.py  test_crud.py  test_llm_streaming.py
